fix: text overflowing after incorrect styling

--- a/ui/pages/keyring-snaps/new-snap-account-page/new-snap-account-page.scss
+++ b/ui/pages/keyring-snaps/new-snap-account-page/new-snap-account-page.scss
@@ -3,9 +3,6 @@
   $width-screen-md-min: 80vw;
   $width-screen-lg-min: 62vw;
 
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
 
   @include screen-sm-min {
     width: $width-screen-sm-min;
@@ -41,7 +38,6 @@
 
 .snap-account-cards {
   grid-template-columns: repeat(3, 1fr);
-  height: 100%;
 }
 
 .snap-account-color-text {
